  windows, was not working
- Fix bug: bad Weibull plot (under "Distribution graphs")
  when adding Weibull curve to an existing plot that includes
  negative values of x
- Add convenience function: logistic()
- MS Windows package: update pango and gnuplot
- Scalar variables: improve GUI management, and add a 
  --scalars option to the "varlist" command
- Fix memory leak on repeated sub-sampling
- Miscellaneous small GUI fixes

10/10/2009 version 1.8.5
- Fix: avoid duplicating the return line when saving
  packaged functions that were originally old-style
- Several refinements for function-package editor
- Update the gretl function package DTD
- genr: improvements in type-handling for some tricky
  cases
- Internal clean-up: revamp gretl's mechanism for reading
  configuration info and setting paths at start-up
- Fix bug in handling of the R dll on Windows
- Function parameter [min:max:default] values: fix bug
  for locales using ',' as decimal separator
- Fix bugs 2843717, 2848633, 2865384
- Fix bug in corrgm() function when the series given as
  arguments contain missing values 
- Add --to-file and --from-file options to "set" command
- Several refinements for the GUI "model table"
- Fix bug: error when trying to save the dataset, in the
  context of a saved-then-reopened session file
- Fix bug: in some circumstances model tests failed to
  respect the sample used when estimating the model, if the
  sample had since been changed 
- Fix bug: wrong results from the "fcast" command after
  estimating an ordered probit or logit model
- Fix bug: the --output option to the "gnuplot" command was
  not being respected in the gretl console
- Fix bug: inconsistent handling of maximum command-line
  length in the context of loops
- GUI, main window, Sample menu: add an item to print 
  details of the current sample status
- On closing GUI session, close any open graph windows 
- RATS databases: recognize weekly data